# AnaSim

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
.Jules/: palette.md
anasim/: __init__.py  cli.py
anasim/core/: constants.py  drug_api.py  engine.py  enums.py  equilibrium.py  metrics.py  recorder.py  state.py  step_helpers.py  tci.py  units.py  utils.py
comparisons/: analyze_results.py  run_anasim.py  run_pas.py  utils.py
core/: constants.py  drug_api.py  engine.py  equilibrium.py  metrics.py  recorder.py  state.py  step_helpers.py  tci.py  utils.py
docs/: ARCHITECTURE.md  CLI_USAGE.md  DEPENDENCIES.md  REFERENCES.md  TODO.md
machine/: circuit.py  pumps.py  ventilator.py  volatile.py
monitors/: alarms.py  capno.py  ecg.py  nibp.py  spo2.py
patient/: patient.py  pd_models.py  pk_models.py  volatile_pk.py
physiology/: disturbances.py  hemodynamics.py  resp_mech.py  respiration.py
scripts/: capture_screenshots.py  run_benchmarks.py
tests/: conftest.py  repro_respiration_fix.py  test_adaptive_dt.py  test_airway_complications.py  test_clinical_scenarios.py  test_clinical_timing.py  test_components.py  test_death_detector.py  test_engine_integration.py  test_hemodynamics.py  test_infusion_pump.py  test_long_duration.py  test_machine_circuit.py  test_n2o_effects.py  test_nibp_capno.py  test_pharmacology.py  test_respiration.py  test_shivering.py  test_tci_accuracy.py  test_temperature.py  test_ui.py  test_ventilator.py  test_volatile_pk.py
ui/: config_dialog.py  controls_widget.py  main_window.py  monitor_widget.py  tutorial_overlay.py
(+35 files in other folders)
