[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anasim"
version = "0.1.0"
description = "A comprehensive physiology and anesthesia simulation engine"
readme = "README.md"
authors = [
  { name = "Robert Chen", email = "robert.chen@icahn.mssm.edu" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "PySide6",
    "scipy",
    "pandas",
]

[project.urls]
"Homepage" = "https://github.com/robchiral/AnaSim"
"Bug Tracker" = "https://github.com/robchiral/AnaSim/issues"
"Source" = "https://github.com/robchiral/AnaSim"

[project.scripts]
anasim = "anasim.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["anasim*"]
